nodes/mc/gomc/src/mc/valuetype/parser.output

state 0
	$accept: .parseroot $end 

	IDENT  shift 5
	NUM  shift 4
	STR  shift 3
	BOOL  shift 6
	ONEOF  shift 8
	'{'  shift 9
	'['  shift 7
	.  error

	parseroot  goto 1
	typedesc  goto 2

state 1
	$accept:  parseroot.$end 

	$end  accept
	.  error


state 2
	parseroot:  typedesc.    (1)

	.  reduce 1 (src line 44)


state 3
	typedesc:  STR.    (2)

	.  reduce 2 (src line 52)


state 4
	typedesc:  NUM.    (3)

	.  reduce 3 (src line 56)


state 5
	typedesc:  IDENT.    (4)

	.  reduce 4 (src line 60)


state 6
	typedesc:  BOOL.    (5)

	.  reduce 5 (src line 64)


state 7
	typedesc:  '['.typedesc ']' 

	IDENT  shift 5
	NUM  shift 4
	STR  shift 3
	BOOL  shift 6
	ONEOF  shift 8
	'{'  shift 9
	'['  shift 7
	.  error

	typedesc  goto 10

state 8
	typedesc:  ONEOF.'(' oneofentries ')' 

	'('  shift 11
	.  error


state 9
	typedesc:  '{'.mapentries '}' 

	IDENT  shift 14
	.  error

	mapentries  goto 12
	mapentry  goto 13

state 10
	typedesc:  '[' typedesc.']' 

	']'  shift 15
	.  error


state 11
	typedesc:  ONEOF '('.oneofentries ')' 

	IDENT  shift 5
	NUM  shift 4
	STR  shift 3
	BOOL  shift 6
	ONEOF  shift 8
	'{'  shift 9
	'['  shift 7
	.  error

	typedesc  goto 17
	oneofentries  goto 16

state 12
	typedesc:  '{' mapentries.'}' 

	'}'  shift 18
	.  error


state 13
	mapentries:  mapentry.    (11)
	mapentries:  mapentry.',' mapentries 

	','  shift 19
	.  reduce 11 (src line 108)


state 14
	mapentry:  IDENT.':' typedesc 
	mapentry:  IDENT.'*' ':' typedesc 
	mapentry:  IDENT.':' typedesc '=' value 

	'*'  shift 21
	':'  shift 20
	.  error


state 15
	typedesc:  '[' typedesc ']'.    (6)

	.  reduce 6 (src line 68)


state 16
	typedesc:  ONEOF '(' oneofentries.')' 

	')'  shift 22
	.  error


state 17
	oneofentries:  typedesc.    (9)
	oneofentries:  typedesc.',' oneofentries 

	','  shift 23
	.  reduce 9 (src line 95)


state 18
	typedesc:  '{' mapentries '}'.    (8)

	.  reduce 8 (src line 76)


state 19
	mapentries:  mapentry ','.mapentries 

	IDENT  shift 14
	.  error

	mapentries  goto 24
	mapentry  goto 13

state 20
	mapentry:  IDENT ':'.typedesc 
	mapentry:  IDENT ':'.typedesc '=' value 

	IDENT  shift 5
	NUM  shift 4
	STR  shift 3
	BOOL  shift 6
	ONEOF  shift 8
	'{'  shift 9
	'['  shift 7
	.  error

	typedesc  goto 25

state 21
	mapentry:  IDENT '*'.':' typedesc 

	':'  shift 26
	.  error


state 22
	typedesc:  ONEOF '(' oneofentries ')'.    (7)

	.  reduce 7 (src line 72)


state 23
	oneofentries:  typedesc ','.oneofentries 

	IDENT  shift 5
	NUM  shift 4
	STR  shift 3
	BOOL  shift 6
	ONEOF  shift 8
	'{'  shift 9
	'['  shift 7
	.  error

	typedesc  goto 17
	oneofentries  goto 27

state 24
	mapentries:  mapentry ',' mapentries.    (12)

	.  reduce 12 (src line 112)


state 25
	mapentry:  IDENT ':' typedesc.    (13)
	mapentry:  IDENT ':' typedesc.'=' value 

	'='  shift 28
	.  reduce 13 (src line 117)


state 26
	mapentry:  IDENT '*' ':'.typedesc 

	IDENT  shift 5
	NUM  shift 4
	STR  shift 3
	BOOL  shift 6
	ONEOF  shift 8
	'{'  shift 9
	'['  shift 7
	.  error

	typedesc  goto 29

state 27
	oneofentries:  typedesc ',' oneofentries.    (10)

	.  reduce 10 (src line 101)


state 28
	mapentry:  IDENT ':' typedesc '='.value 

	NUMBER  shift 31
	STRING  shift 32
	TRUE  shift 33
	FALSE  shift 34
	'{'  shift 35
	'['  shift 36
	.  error

	value  goto 30

state 29
	mapentry:  IDENT '*' ':' typedesc.    (14)

	.  reduce 14 (src line 126)


state 30
	mapentry:  IDENT ':' typedesc '=' value.    (15)

	.  reduce 15 (src line 135)


state 31
	value:  NUMBER.    (16)

	.  reduce 16 (src line 144)


state 32
	value:  STRING.    (17)

	.  reduce 17 (src line 149)


state 33
	value:  TRUE.    (18)

	.  reduce 18 (src line 153)


state 34
	value:  FALSE.    (19)

	.  reduce 19 (src line 157)


state 35
	value:  '{'.mapvals '}' 
	value:  '{'.'}' 

	IDENT  shift 39
	'}'  shift 38
	.  error

	mapvals  goto 37

state 36
	value:  '['.listvals ']' 
	value:  '['.']' 

	NUMBER  shift 31
	STRING  shift 32
	TRUE  shift 33
	FALSE  shift 34
	'{'  shift 35
	'['  shift 36
	']'  shift 41
	.  error

	value  goto 42
	listvals  goto 40

state 37
	value:  '{' mapvals.'}' 

	'}'  shift 43
	.  error


state 38
	value:  '{' '}'.    (21)

	.  reduce 21 (src line 165)


state 39
	mapvals:  IDENT.':' value 
	mapvals:  IDENT.':' value ',' mapvals 

	':'  shift 44
	.  error


state 40
	value:  '[' listvals.']' 

	']'  shift 45
	.  error


state 41
	value:  '[' ']'.    (23)

	.  reduce 23 (src line 175)


state 42
	listvals:  value.    (26)
	listvals:  value.',' listvals 

	','  shift 46
	.  reduce 26 (src line 197)


state 43
	value:  '{' mapvals '}'.    (20)

	.  reduce 20 (src line 161)


state 44
	mapvals:  IDENT ':'.value 
	mapvals:  IDENT ':'.value ',' mapvals 

	NUMBER  shift 31
	STRING  shift 32
	TRUE  shift 33
	FALSE  shift 34
	'{'  shift 35
	'['  shift 36
	.  error

	value  goto 47

state 45
	value:  '[' listvals ']'.    (22)

	.  reduce 22 (src line 171)


state 46
	listvals:  value ','.listvals 

	NUMBER  shift 31
	STRING  shift 32
	TRUE  shift 33
	FALSE  shift 34
	'{'  shift 35
	'['  shift 36
	.  error

	value  goto 42
	listvals  goto 48

state 47
	mapvals:  IDENT ':' value.    (24)
	mapvals:  IDENT ':' value.',' mapvals 

	','  shift 49
	.  reduce 24 (src line 182)


state 48
	listvals:  value ',' listvals.    (27)

	.  reduce 27 (src line 203)


state 49
	mapvals:  IDENT ':' value ','.mapvals 

	IDENT  shift 39
	.  error

	mapvals  goto 50

state 50
	mapvals:  IDENT ':' value ',' mapvals.    (25)

	.  reduce 25 (src line 188)


22 terminals, 9 nonterminals
28 grammar rules, 51/8000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
58 working sets used
memory: parser 20/120000
26 extra closures
87 shift entries, 1 exceptions
18 goto entries
3 entries saved by goto default
Optimizer space used: output 57/120000
57 table entries, 0 zero
maximum spread: 22, maximum offset: 49
